//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Study {
  project_id String [pk]
  Samples Sample [not null]
  GenericData GenericData [not null]
}

Table Sample {
  samp_name String [pk]
  project_id String [not null]
  Study Study [not null]
  assay_name String [not null]
  Assay Assay [not null]
  Occurrence Occurrence [not null]
  GenericData GenericData [not null]
  samp_category String [not null]
  decimalLatitude Float [not null]
  decimalLongitude Float [not null]
  verbatimLatitude String
  verbatimLongitude String
  verbatimCoordinateSystem String
  verbatimSRS String
  geo_loc_name String [not null]
  eventDate String [not null]
  eventDurationValue Int
  eventDurationUnit String
  verbatimEventDate String
  verbatimEventTime String
  verbatimDateEnd String
  verbatimTimeEnd String
  env_broad_scale String [not null]
  env_local_scale String [not null]
  env_medium String [not null]
  habitat_natural_artificial_0_1 Boolean
  samp_collect_method String
  samp_collect_device String
  samp_size Float
  samp_size_unit String
  samp_store_temp String
  samp_store_sol String
  samp_store_dur String
  samp_store_method_additional String
  samp_mat_process String
  filter_passive_active_0_1 Boolean
  filter_onsite_dur String
  size_frac_low Float
  size_frac Float
  filter_diameter Float
  filter_surface_area Float
  filter_material String
  filter_name String
  precip_chem_prep String
  precip_force_prep Float
  precip_time_prep Float
  precip_temp_prep Float
  prepped_samp_store_temp String
  prepped_samp_store_sol String
  prepped_samp_store_dur Float
  prep_method_additional String
  rel_cont_id String
  sample_derived_from String
  sample_composed_of String
  biological_rep_relation String
  samp_vol_we_dna_ext Float
  samp_vol_we_dna_ext_unit String
  nucl_acid_ext_lysis String
  nucl_acid_ext_sep String
  nucl_acid_ext String
  nucl_acid_ext_kit String
  nucl_acid_ext_modify String
  dna_cleanup_0_1 Boolean
  dna_cleanup_method String
  concentration Float
  concentration_method String
  ratioOfAbsorbance260_280 Float
  pool_dna_num Float
  nucl_acid_ext_method_additional String
  input_read_count Int
  output_read_count Int
  output_otu_num Int
  otu_num_tax_assgined Int
  samp_weather String
  minimumDepthInMeters Float
  maximumDepthInMeters Float
  tot_depth_water_col Float
  elev Float
  temp Float
  chlorophyll Float
  light_intensity Float
  misc_param Float
  ph Float
  ph_meth String
  salinity Float
  suspend_part_matter Float
  tidal_stage String
  turbidity Float
  water_current Float
  solar_irradiance String
  wind_direction String
  wind_speed Float
  diss_inorg_carb Float
  diss_inorg_nitro Float
  diss_org_carb Float
  diss_org_nitro Float
  diss_oxygen Float
  tot_diss_nitro Float
  tot_inorg_nitro Float
  tot_nitro Float
  tot_part_carb Float
  tot_org_carb Float
  tot_org_c_meth Float
  tot_nitro_content Float
  tot_nitro_cont_meth Float
  tot_carb Float
  part_org_carb Float
  part_org_nitro Float
  nitrate Float
  nitrite Float
  nitro Float
  org_carb Float
  org_matter Float
  org_nitro Float
}

Table Assay {
  assay_name String [pk]
  Samples Sample [not null]
  Libraries Library [not null]
  GenericData GenericData [not null]
  pcr_plate_id String
}

Table Library {
  library_id String [pk]
  assay_name String [not null]
  Assay Assay [not null]
  Analysiss Analysis [not null]
  GenericData GenericData [not null]
  mid_forward String
  mid_reverse String
  filename String
  filename2 String
}

Table Analysis {
  id Int [pk, increment]
  library_id String [not null]
  Library Library [not null]
  Occurrences Occurrence [not null]
  GenericData GenericData [not null]
}

Table Occurrence {
  id Int [pk, increment]
  analysisId Int
  Analysis Analysis
  samp_name String [not null]
  Sample Sample [not null]
  featureid String [not null]
  Feature Feature [not null]
  organismQuantity Int [not null]
}

Table Feature {
  featureid String [pk]
  Occurrences Occurrence [not null]
  Assignments Assignment [not null]
  consensusTaxonomyId String
  consensusTaxonomy Taxonomy
  sequence String [not null]
}

Table Assignment {
  id Int [pk, increment]
  featureid String [not null]
  Feature Feature [not null]
  taxonomy String [not null]
  Taxonomy Taxonomy [not null]
  confidence Float [not null]
}

Table Taxonomy {
  taxonomy String [pk]
  Assignments Assignment [not null]
  Features Feature [not null]
  verbatimIdentification String [not null]
  domain String
  kingdom String
  supergroup String
  division String
  subdivision String
  phylum String
  taxonClass String
  order String
  family String
  genus String
  species String
}

Table GenericData {
  id Int [pk, increment]
  project_id String [not null]
  Study Study [not null]
  samp_name String [not null]
  Sample Sample [not null]
  assay_name String [not null]
  Assay Assay [not null]
  library_id String [not null]
  Library Library [not null]
  analysisId Int [not null]
  Analysis Analysis [not null]
  key String [not null]
  value String [not null]
}

Ref: Sample.project_id > Study.project_id

Ref: Sample.assay_name > Assay.assay_name

Ref: Library.assay_name > Assay.assay_name

Ref: Analysis.library_id > Library.library_id

Ref: Occurrence.analysisId > Analysis.id

Ref: Occurrence.samp_name > Sample.samp_name

Ref: Occurrence.featureid > Feature.featureid

Ref: Feature.consensusTaxonomyId > Taxonomy.taxonomy

Ref: Assignment.featureid > Feature.featureid

Ref: Assignment.taxonomy > Taxonomy.taxonomy

Ref: GenericData.project_id > Study.project_id

Ref: GenericData.samp_name > Sample.samp_name

Ref: GenericData.assay_name > Assay.assay_name

Ref: GenericData.library_id > Library.library_id

Ref: GenericData.analysisId > Analysis.id